hapus file frontend, perubahan dan perbaikan
